hphp/hack/test/typecheck/readonly/as_expression_mutable_prim_nullable.php.exp
WARN: File "as_expression_mutable_prim_nullable.php", line 5, characters 12-27:
This `as` assertion will always succeed and hence is redundant. The expression on the left has a type `int` which is a subtype of `int`. (Warn[12011])
ERROR: File "as_expression_mutable_prim_nullable.php", line 5, characters 12-27:
Invalid return type (Typing[4110])
  File "as_expression_mutable_prim_nullable.php", line 4, characters 38-40:
  Expected `int`
  File "as_expression_mutable_prim_nullable.php", line 5, characters 12-27:
  But got `?int`
